# rust-genderize

./: .gitignore  Cargo.toml  README.md  demonyms.json  seed_profiles.json
migrations/: 20240417000000_create_profiles_table.sql  20240423000000_add_country_name_to_profiles.sql
src/: main.rs
